--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'Fraunces';
-    src: url('assets/fonts/Fraunces-VariableFont_SOFT,WONK,opsz,wght.ttf') format('truetype');
+    src: url('fonts/Fraunces-VariableFont_SOFT,WONK,opsz,wght.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('assets/fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
+    src: url('fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
 }
 
 /* CSS Reset */
@@ -14,3 +14,52 @@
     padding: 0;
     box-sizing: border-box;
   }
+  
+
+/* Mobile */
+
+@media screen and (max-width: 830px) {
+    body {
+        background-color: #F2EBE3;
+    }
+
+    h1 {
+        font-family: 'Fraunces', serif;
+        line-height: 33px;
+    }
+
+    p {
+        font-family: 'Montserrat', sans-serif;
+    }
+
+    .image-desktop {
+        display: none;
+    }
+
+    .image-mobile {
+        width: 100%;
+        border-radius: 12px 12px 0 0;
+        
+    }
+
+    .product-container {        
+        background-color: white;
+        margin: 28px 16px; 
+        border-radius: 12px;               
+    }
+
+    .product-detail {
+        padding: 24px;                
+    }
+
+    .product-detail-title p{
+        text-transform: uppercase;
+        font-size: 12px;
+        letter-spacing: 5.2px;
+        font-weight: 500;
+        color: #6C7289;
+        margin-bottom: 12px;
+
+    }
+
+}
